# fastapi-flask-benchmark

./: .gitignore  LICENSE  README.md  benchmark.py  benchmark_runner.py  fastapi_app_async.py  fastapi_app_sync.py  fastapi_models.py  flask_app.py  pyproject.toml  start_webserver.py
analysis/: benchmark_analysis.ipynb
data/: 10000_people.json
helpers/: constants.py  database_helper_async.py  database_helper_sync.py  json_helper.py  request_helpers.py  work_helper.py
wrk_scripts/: json_with_print_to_csv.lua  print_to_csv.lua
