[tool.poetry]
name = "fastapi-flask-benchmark"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
fastapi = "^0.61.1"
gunicorn = "^20.0.4"
uvicorn = "^0.12.0"
uvloop = "^0.14.0"
httptools = "^0.1.1"
aiohttp = "^3.6.2"
ergo = {git = "https://github.com/oughtinc/ergo.git"}
sqlalchemy = "^1.3.19"
databases = "^0.3.2"
aiosqlite = "^0.15.0"
asyncpg = "^0.21.0"
wheel = "^0.35.1"
psycopg2 = "^2.8.6"
jupyterlab = "^2.2.8"
seaborn = "0.10.0"
pandas = "1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
